# slambook2

./: .clang-format
ch2/: CMakeLists.txt  libHelloSLAM.cpp  libHelloSLAM.h
ch3/examples/: coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch4/: useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: joinMap.cpp
ch5/stereo/: stereoVision.cpp
